# spielviz

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: kuhn_poker.py  leduc_poker.py  spielviz_demo.ipynb  tic_tac_toe.py
src/spielviz/: __init__.py  _utils.py  infosets.py  render.py  strategy.py  tree.py
tests/: test_infosets.py  test_render.py  test_strategy.py  test_tree.py
