[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spielviz"
version = "0.1.1"
description = "Python visualization library for OpenSpiel game trees, information sets, and strategy profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kaushik Rajan" }
]
keywords = [
    "game-theory", "openspiel", "visualization", "game-tree",
    "information-sets", "nash-equilibrium", "extensive-form-games"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "open-spiel>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/kvr06-ai/spielviz"
Issues = "https://github.com/kvr06-ai/spielviz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spielviz"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
